# cxx_template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  build.sh  clean.sh  conanfile.txt
include/: application.hpp  log.hpp  version.hpp  version.hpp.in
src/: application.cpp  log.cpp  main.cpp
test/unit/: test.cpp
